fix form input overflowing boundry

--- a/app/assets/stylesheets/public/forms.css.scss
+++ b/app/assets/stylesheets/public/forms.css.scss
@@ -11,9 +11,16 @@
 }
 
 form .input {
+  float: left;
+  margin-left: 25px;
+  width: 485px;
   span.media {
     display: block;
     float: left;
     margin-right: 10px;
   }
+}
+
+.input-xxlarge, input.xxlarge, textarea.xxlarge, select.xxlarge {
+  width: 475px;
 }
